# py_ecowater

./: .bumpversion.cfg  .gitignore  README.md  setup.cfg
buildrunner.results/: artifacts.json
src/py_ecowater/: __init__.py  constants.py  ecowater_client.py  model.py
